--- a/css/style.css
+++ b/css/style.css
@@ -912,7 +912,7 @@ breadcrumb
 
 .breadcrumb h1 {
     margin-bottom: 5px;
-    font-size: 20px;
+    font-size: 40px;
     text-transform: uppercase;
 }
 
@@ -993,6 +993,9 @@ sec-title
 .welcome .container .title2{
     font-size: 25px;
     font-weight: 800;
+}
+.container .row-new{
+    margin-top: 20px;
 }
 .welcome .container p{
     font-size: 15px;
@@ -2054,7 +2057,7 @@ welcome
 
 .edu_feature h3 {
     text-transform: uppercase;
-    font-size: 20px;
+    font-size: 25px;
     margin-bottom: 15px;
 }
 
